# ouisync-plugin

./: .gitignore  .gitmodules  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml
android/: .gitignore  CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/ouisync_plugin/: OuisyncPlugin.kt
android/src/main/kotlin/ie/equalit/ouisync_plugin/: AbstractFileProvider.kt  OuisyncPlugin.kt  PipeProvider.kt
example/: pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  repos_actions.dart
example/test/: widget_test.dart
example/windows/flutter/: generated_plugins.cmake
ios/: .gitignore  ouisync_plugin.podspec
ios/Classes/: OuisyncPlugin.h  SwiftOuisyncPlugin.swift  localRepository.cpp  localRepository.h  std_scoped_redirect.h
ios/Classes/Shared/: CallbackManager.cpp  (+1 more)
lib/: bindings.dart  bindings.dart.orig  bindings_global.dart  client.dart  native_channels.dart  ouisync.dart  ouisync_plugin.dart  ouisync_plugin_method_channel.dart  ouisync_plugin_platform_interface.dart  state_monitor.dart
lib/internal/: util.dart
linux/: CMakeLists.txt
test/: add_file_folder_syncing_test.dart  close_repo_async_test.dart  get_files_size_deadlock_test.dart  move_entry_test.dart  multiple_nodes_test.dart  notifications_test.dart  open_directory_fails_permisions_test.dart  ouisync_plugin_method_channel_test.dart  ouisync_plugin_test.dart
util/: bindgen.dart
windows/: CMakeLists.txt
(+3 files in other folders)
